--- a/Yfinance_analyst_Strong_Buy.ipynb
+++ b/Yfinance_analyst_Strong_Buy.ipynb
@@ -2,34 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "373fa8ef",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching candidates for: Canada...\n",
-      "[Info] loading page [###########################---] 8/9 \n",
-      "Success! Found 162 'Buy' rated Canadian stocks.\n",
-      "Variable 'top_picks' is ready. Click it in the Jupyter Variables view.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\jdcc3\\AppData\\Roaming\\Python\\Python313\\site-packages\\finvizfinance\\screener\\base.py:134: FutureWarning: The behavior of DataFrame concatenation with empty or all-NA entries is deprecated. In a future version, this will no longer exclude empty or all-NA columns when determining the result dtypes. To retain the old behavior, exclude the relevant entries before the concat operation.\n",
-      "  return pd.concat([df, pd.DataFrame(frame)], ignore_index=True)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from finvizfinance.screener.overview import Overview\n",
     "\n",
-    "def get_filtered_picks(countries=['Canada'], limit_per_country=200):\n",
+    "def get_filtered_picks(countries=['Canada'], limit_per_country=500):\n",
     "    all_stocks = []\n",
     "    \n",
     "    for country in countries:\n",
@@ -101,21 +82,90 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
+   "id": "26c1e739",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from finvizfinance.screener.overview import Overview\n",
+    "\n",
+    "def get_filtered_picks(countries=['Canada'], limit_per_country=500):\n",
+    "    all_stocks = []\n",
+    "    \n",
+    "    for country in countries:\n",
+    "        print(f\"Fetching candidates for: {country}...\")\n",
+    "        \n",
+    "        try:\n",
+    "            foverview = Overview()\n",
+    "            \n",
+    "            # --- STEP 1: Broaden the initial search ---\n",
+    "            filters_dict = {\n",
+    "                'Analyst Recom.': 'Strong Buy (1)',\n",
+    "                'Country': country\n",
+    "            }\n",
+    "            foverview.set_filter(filters_dict=filters_dict)\n",
+    "            \n",
+    "            # Get results\n",
+    "            df_results = foverview.screener_view()\n",
+    "            \n",
+    "            if not df_results.empty:\n",
+    "                df_results['Source_Country'] = country\n",
+    "                all_stocks.append(df_results)\n",
+    "            else:\n",
+    "                print(f\"   No stocks found for {country}.\")\n",
+    "                \n",
+    "        except Exception as e:\n",
+    "            print(f\"   Error fetching {country}: {e}\")\n",
+    "\n",
+    "    if not all_stocks:\n",
+    "        print(\"\\nNo stocks found from any country.\")\n",
+    "        return pd.DataFrame()\n",
+    "\n",
+    "    # Combine all results\n",
+    "    combined_df = pd.concat(all_stocks, ignore_index=True)\n",
+    "    \n",
+    "    # --- STEP 2: The Rating Filter ---\n",
+    "    cols = combined_df.columns.tolist()\n",
+    "    recom_col = 'Recom' if 'Recom' in cols else 'Analyst Recom'\n",
+    "    \n",
+    "    if recom_col in cols:\n",
+    "        # Convert column to numbers\n",
+    "        combined_df[recom_col] = pd.to_numeric(combined_df[recom_col], errors='coerce')\n",
+    "        \n",
+    "        # Filter: keep anything <= 2.0 (Buy or Strong Buy)\n",
+    "        print(f\"Filtering out 'Hold' or worse (Rating > 2.0)...\")\n",
+    "        combined_df = combined_df[combined_df[recom_col] <= 2.0 ] #use <=2.0 for normal output\n",
+    "        \n",
+    "        # Sort by best rating\n",
+    "        combined_df = combined_df.sort_values(by=recom_col, ascending=True)\n",
+    "\n",
+    "    # Clean up columns for display\n",
+    "    desired_cols = ['Ticker', 'Company', 'Sector', 'Price', 'Source_Country', recom_col]\n",
+    "    final_cols = [c for c in desired_cols if c in combined_df.columns]\n",
+    "    \n",
+    "    return combined_df[final_cols].head(limit_per_country * len(countries))\n",
+    "\n",
+    "# --- Usage ---\n",
+    "Strong_Buy_canada = get_filtered_picks(['Canada'])\n",
+    "\n",
+    "if not Strong_Buy_canada.empty:\n",
+    "    # Ensure Price is numeric (so you can sort it yourself in the Data Viewer)\n",
+    "    Strong_Buy_canada['Price'] = pd.to_numeric(Strong_Buy_canada['Price'], errors='coerce')\n",
+    "\n",
+    "    print(f\"\\nSuccess! Found {len(Strong_Buy_canada)} ' Strong Buy' rated Canadian stocks.\")\n",
+    "    print(\"Variable 'top_picks' is ready. Click it in the Jupyter Variables view.\")\n",
+    "\n",
+    "else:\n",
+    "    print(\"DataFrame is empty.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "f6870e71",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fetching candidates for: USA...\n",
-      "[Info] loading page [##############################] 77/78 \n",
-      "Success! Found 1542 candidates.\n",
-      "Variable 'top_picks' is ready for the Data Viewer.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from finvizfinance.screener.overview import Overview\n",
@@ -192,19 +242,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7f43a868",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Found 595 stocks between $5 and $30.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "if not top_picks.empty:\n",
     "    # Ensure the 'Price' column is numeric\n",
@@ -221,19 +262,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "986eb2e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Found 533 stocks between $5 and $30.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# filter for price range less than $5 a bit gambly\n",
     "if not top_picks.empty:\n",
@@ -243,7 +275,7 @@
     "    # CORRECT WAY: Use '&' with parentheses\n",
     "    cheap_picks = top_picks[(top_picks['Price'] < 5)]\n",
     "\n",
-    "    print(f\"\\nFound {len(cheap_picks)} stocks between $5 and $30.\")\n",
+    "    print(f\"\\nFound {len(cheap_picks)} stocks less than $5\")\n",
     "    # print(cheap_picks) # Uncomment if you want to see the list in output\n",
     "else:\n",
     "    print(\"DataFrame is empty.\")"
@@ -251,54 +283,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "02d93732",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Found 224 Technology stocks.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# filter for price range less than $5 a bit gambly\n",
     "if not top_picks.empty:\n",
-    "    # 1. FIX: Do NOT convert 'Sector' to numeric. \n",
-    "    # (Only 'Price' needs to be numeric if you filter by price later)\n",
-    "    # top_picks['Price'] = pd.to_numeric(top_picks['Price'], errors='coerce') \n",
+    "    # Ensure the 'Price' column is numeric\n",
+    "    top_picks['Price'] = pd.to_numeric(top_picks['Price'], errors='coerce')\n",
     "\n",
-    "    # 2. Filter for Sector = 'Technology'\n",
-    "    # We use .str.contains to be safe (catches 'Technology', 'Technology Services', etc.)\n",
-    "    tech_picks = top_picks[top_picks['Sector'].str.contains('Technology', case=False, na=False)]\n",
+    "    # CORRECT WAY: Use '&' with parentheses\n",
+    "    Main_TFSA_picks = top_picks[(top_picks['Price'] > 20)]\n",
     "\n",
-    "    print(f\"\\nFound {len(tech_picks)} Technology stocks.\")\n",
-    "    \n",
-    "    # 3. View in Variable Explorer (VS Code)\n",
-    "    # You can now open 'tech_picks' in the Data Viewer\n",
+    "    print(f\"\\nFound {len(Main_TFSA_picks)} stocks greater than $20.\")\n",
+    "    # print(cheap_picks) # Uncomment if you want to see the list in output\n",
     "else:\n",
     "    print(\"DataFrame is empty.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "7bdc7adb",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'\\nimport yfinance as yf\\nimport time\\n\\n# Loop through EVERY symbol in the list (removed the [:3])\\nfor symbol in ticker_list:\\n    \\n    # 1. Fetch data\\n    stock = yf.Ticker(symbol)\\n    print(f\"\\n--- Checking {symbol} ---\")\\n    \\n    try:\\n        # 2. Get the upgrades/downgrades\\n        upgrades = stock.upgrades_downgrades\\n        \\n        if not upgrades.empty:\\n            # Filter for 2025 actions using the .index fix\\n            recent = upgrades[upgrades.index >= \\'2025-11-01\\']\\n            \\n            if not recent.empty:\\n                print(recent)\\n            else:\\n                print(f\"No actions for {symbol} in 2025.\")\\n        else:\\n            print(f\"No analyst history found for {symbol}.\")\\n            \\n    except Exception as e:\\n        print(f\"Error fetching {symbol}: {e}\")\\n\\n    # 3. CRITICAL: Sleep for 1 second to avoid getting banned\\n    time.sleep(1)\\n'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "import yfinance as yf\n",
