--- a/USA_Yfinance_Vol_Marketcap_filter_Watchlist_12-01.ipynb
+++ b/USA_Yfinance_Vol_Marketcap_filter_Watchlist_12-01.ipynb
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "e2cf266e",
    "metadata": {},
    "outputs": [
@@ -244,14 +244,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "--- Processing 1 stocks ---\n",
-      "1. Fetching Analyst Ratings from Finviz...\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "--- Processing 2 stocks ---\n",
+      "1. Fetching Analyst Ratings from Finviz...\n",
+      "   Skipping Finviz for BTO.TO: HTTP error for URL https://finviz.com/quote.ashx?t=BTO.TO: 404 Client Error: Not Found for url: https://finviz.com/quote.ashx?t=BTO.TO\n",
       "2. Fetching Price & Volatility from yfinance...\n"
      ]
     },
@@ -259,7 +254,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\jdcc3\\AppData\\Local\\Temp\\ipykernel_7692\\3538496220.py:40: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "C:\\Users\\jdcc3\\AppData\\Local\\Temp\\ipykernel_4820\\2137955490.py:40: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  data = yf.download(ticker_list, period=\"1y\", interval=\"1d\", group_by='ticker', progress=False, threads=True)\n"
      ]
     },
@@ -303,12 +298,12 @@
         {
          "name": "Recom",
          "rawType": "object",
-         "type": "string"
+         "type": "unknown"
         },
         {
          "name": "Target_Price",
          "rawType": "object",
-         "type": "string"
+         "type": "unknown"
         },
         {
          "name": "Rel_Volume",
@@ -321,10 +316,10 @@
          "type": "float"
         }
        ],
-       "ref": "dc992a72-cdbb-415d-b776-07494429fe7e",
+       "ref": "25827f2b-4546-4136-8759-d3032f61b6c7",
        "rows": [
         [
-         "0",
+         "1",
          "GRND",
          "12.85",
          "0.16",
@@ -333,11 +328,22 @@
          "21.75",
          "0.55",
          "3.23"
+        ],
+        [
+         "0",
+         "BTO.TO",
+         "6.41",
+         "-1.23",
+         "-23.23",
+         null,
+         null,
+         "0.68",
+         "2.89"
         ]
        ],
        "shape": {
         "columns": 8,
-        "rows": 1
+        "rows": 2
        }
       },
       "text/html": [
@@ -371,7 +377,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <th>1</th>\n",
        "      <td>GRND</td>\n",
        "      <td>12.85</td>\n",
        "      <td>0.16</td>\n",
@@ -381,16 +387,29 @@
        "      <td>0.55</td>\n",
        "      <td>3.23</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BTO.TO</td>\n",
+       "      <td>6.41</td>\n",
+       "      <td>-1.23</td>\n",
+       "      <td>-23.23</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0.68</td>\n",
+       "      <td>2.89</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "  Ticker  Price  Change_%  Drop_from_High_% Recom Target_Price  Rel_Volume  \\\n",
-       "0   GRND  12.85      0.16            -48.87  1.40        21.75        0.55   \n",
+       "   Ticker  Price  Change_%  Drop_from_High_% Recom Target_Price  Rel_Volume  \\\n",
+       "1    GRND  12.85      0.16            -48.87  1.40        21.75        0.55   \n",
+       "0  BTO.TO   6.41     -1.23            -23.23   NaN          NaN        0.68   \n",
        "\n",
        "   Volatility_%  \n",
-       "0          3.23  "
+       "1          3.23  \n",
+       "0          2.89  "
       ]
      },
      "metadata": {},
@@ -405,7 +424,7 @@
     "import numpy as np\n",
     "\n",
     "# --- 1. INPUT YOUR MANUAL LIST HERE ---\n",
-    "MY_TICKERS = ['GRND'] \n",
+    "MY_TICKERS = ['GRND', 'BTO.TO'] \n",
     "\n",
     "def get_combined_watchlist(ticker_list):\n",
     "    print(f\"--- Processing {len(ticker_list)} stocks ---\")\n",
