--- a/Equity_Research_USA_Financials.ipynb
+++ b/Equity_Research_USA_Financials.ipynb
@@ -2,50 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "79e52bad",
+   "execution_count": 1,
+   "id": "8f19fd49",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "--- STEP 1: Fetching Raw Stock Lists ---\n",
-      "   -> Found 5974 US candidates.\n",
-      "\n",
-      "--- STEP 2: Filtering for Financial Services (YahooQuery) ---\n",
-      "   Filtering batch 5500 - 5974...\n",
-      "   -> Filter complete. Survivors: 100\n",
-      "\n",
-      "--- STEP 3: FETCHING METRICS FOR 100 STOCKS ---\n",
-      "   Fetching 95/100...\n",
-      "\n",
-      "✅ Done! Three DataFrames are ready for Data Wrangler:\n",
-      "   1. df_value  (Undervalued)\n",
-      "   2. df_income (High Dividend)\n",
-      "   3. df_growth (High P/E & Strong Buy)\n",
-      "\n",
-      "--- Growth Preview ---\n",
-      "   Ticker   Price        P/E    Recom  Yield%              Sector\n",
-      "13    BUR    9.09  22.725000  1.00000   138.0  Financial Services\n",
-      "21   RIOT   13.44  25.846153  1.27778     0.0  Financial Services\n",
-      "5     HUT   49.64  25.587627  1.33333     0.0  Financial Services\n",
-      "66    BRX   26.30  24.351850  1.50000   468.0         Real Estate\n",
-      "77    KKR  130.41  54.564854  1.50000    57.0  Financial Services\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import yfinance as yf\n",
     "import numpy as np\n",
     "import time\n",
-    "\n",
-    "# Try to import yahooquery for fast filtering\n",
-    "try:\n",
-    "    from yahooquery import Ticker\n",
-    "except ImportError:\n",
-    "    print(\"Please install yahooquery: pip install yahooquery\")\n",
+    "from yahooquery import Ticker"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "d0b26944",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# ==========================================\n",
     "# 1. STEP 1: FETCH UNIVERSE\n",
@@ -63,8 +38,16 @@
     "        print(f\"   -> Found {len(us_list)} US candidates.\")\n",
     "    except Exception as e:\n",
     "        print(f\"   Error fetching US list: {e}\")\n",
-    "    return list(set(tickers))\n",
-    "\n",
+    "    return list(set(tickers))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "b221ce71",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ==========================================\n",
     "# 2. STEP 2: FINANCIALS ONLY FILTER\n",
     "# ==========================================\n",
@@ -123,8 +106,16 @@
     "            \n",
     "    df = pd.DataFrame(valid_candidates)\n",
     "    print(f\"\\n   -> Filter complete. Survivors: {len(df)}\")\n",
-    "    return df\n",
-    "\n",
+    "    return df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "a349f916",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ==========================================\n",
     "# 3. DATA ENRICHMENT\n",
     "# ==========================================\n",
@@ -170,8 +161,16 @@
     "    cols = ['P/E', 'P/B', 'ROE', 'Yield%', 'Recom']\n",
     "    for col in cols: master_df[col] = pd.to_numeric(master_df[col], errors='coerce')\n",
     "    \n",
-    "    return master_df\n",
-    "\n",
+    "    return master_df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "79e52bad",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# ==========================================\n",
     "# 4. VIEW: VALUE PICKS\n",
     "# ==========================================\n",
@@ -208,7 +207,45 @@
     "    \n",
     "    cols = ['Ticker', 'Price', 'P/E', 'Recom', 'Yield%', 'Sector']\n",
     "    return growth_df[cols]\n",
-    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "9ac89716",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "--- STEP 1: Fetching Raw Stock Lists ---\n",
+      "   -> Found 5974 US candidates.\n",
+      "\n",
+      "--- STEP 2: Filtering for Financial Services (YahooQuery) ---\n",
+      "   Filtering batch 5500 - 5974...\n",
+      "   -> Filter complete. Survivors: 100\n",
+      "\n",
+      "--- STEP 3: FETCHING METRICS FOR 100 STOCKS ---\n",
+      "   Fetching 95/100...\n",
+      "\n",
+      "✅ Done! Three DataFrames are ready for Data Wrangler:\n",
+      "   1. df_value  (Undervalued)\n",
+      "   2. df_income (High Dividend)\n",
+      "   3. df_growth (High P/E & Strong Buy)\n",
+      "\n",
+      "--- Growth Preview ---\n",
+      "   Ticker   Price        P/E    Recom  Yield%              Sector\n",
+      "34    BUR    9.09  22.725000  1.00000   138.0  Financial Services\n",
+      "5    RIOT   13.44  25.846153  1.27778     0.0  Financial Services\n",
+      "74    HUT   49.64  25.587627  1.33333     0.0  Financial Services\n",
+      "17      V  355.00  34.838078  1.50000    75.0  Financial Services\n",
+      "23    KKR  130.41  54.564854  1.50000    57.0  Financial Services\n"
+     ]
+    }
+   ],
+   "source": [
     "# ==========================================\n",
     "# EXECUTION BLOCK\n",
     "# ==========================================\n",
@@ -235,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "f602da52",
    "metadata": {},
    "outputs": [
@@ -243,25 +280,26 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "⚠️ 'final_financial_results' is missing. Please run the analysis code block first.\n"
+      "Saving to: C:\\Users\\James\\OneDrive - McMaster University\\YFinance Stock Picks\\Financial_Stock_Picks_2025-12-29.xlsx...\n",
+      "✅ Success! Excel file created.\n",
+      "   - Value Picks: 8\n",
+      "   - Income Picks: 39\n",
+      "   - Growth Picks: 6\n"
      ]
     }
    ],
    "source": [
     "import os\n",
     "import time\n",
+    "import pandas as pd\n",
     "\n",
     "# ==========================================\n",
-    "# 4. SEPARATE SAVE FUNCTION (Financials)\n",
+    "# 4. SEPARATE SAVE FUNCTION (Updated)\n",
     "# ==========================================\n",
-    "def save_financials_to_excel(df):\n",
+    "def save_financials_to_excel(df_value, df_income, df_growth, master_df):\n",
     "    \"\"\"\n",
-    "    Saves the 'final_financial_results' to OneDrive.\n",
+    "    Saves the specific 'Picks' dataframes to OneDrive.\n",
     "    \"\"\"\n",
-    "    if df is None or df.empty:\n",
-    "        print(\"❌ No data found. Did you run the main analysis cell first?\")\n",
-    "        return\n",
-    "\n",
     "    # 1. Setup Filename\n",
     "    today_date = time.strftime(\"%Y-%m-%d\")\n",
     "    file_nickname = f\"Financial_Stock_Picks_{today_date}.xlsx\"\n",
@@ -272,38 +310,47 @@
     "\n",
     "    print(f\"Saving to: {full_path}...\")\n",
     "\n",
-    "    # 3. Filter the Lists again for separate sheets\n",
-    "    value_picks = df[df['Strategy'] == 'Value (Undervalued)'].sort_values(by='P/B', ascending=True)\n",
-    "    income_picks = df[df['Strategy'] == 'Income (Dividend)'].sort_values(by='Yield%', ascending=False)\n",
-    "\n",
     "    try:\n",
     "        if not os.path.exists(onedrive_folder):\n",
     "            os.makedirs(onedrive_folder, exist_ok=True)\n",
     "\n",
     "        with pd.ExcelWriter(full_path, engine='openpyxl') as writer:\n",
-    "            # The 'df' already contains the 'P/E' column, so it will be saved automatically.\n",
-    "            value_picks.to_excel(writer, sheet_name='Value Picks', index=False)\n",
-    "            income_picks.to_excel(writer, sheet_name='Income Picks', index=False)\n",
-    "            df.to_excel(writer, sheet_name='All Financials', index=False)\n",
+    "            # Sheet 1: Value\n",
+    "            if df_value is not None and not df_value.empty:\n",
+    "                df_value.to_excel(writer, sheet_name='Value Picks', index=False)\n",
+    "            \n",
+    "            # Sheet 2: Income\n",
+    "            if df_income is not None and not df_income.empty:\n",
+    "                df_income.to_excel(writer, sheet_name='Income Picks', index=False)\n",
+    "                \n",
+    "            # Sheet 3: Growth (New)\n",
+    "            if df_growth is not None and not df_growth.empty:\n",
+    "                df_growth.to_excel(writer, sheet_name='Growth Picks', index=False)\n",
+    "            \n",
+    "            # Sheet 4: Master Data\n",
+    "            if master_df is not None and not master_df.empty:\n",
+    "                master_df.to_excel(writer, sheet_name='All Data', index=False)\n",
     "            \n",
     "        print(f\"✅ Success! Excel file created.\")\n",
-    "        print(f\"   - Value Picks: {len(value_picks)}\")\n",
-    "        print(f\"   - Income Picks: {len(income_picks)}\")\n",
+    "        print(f\"   - Value Picks: {len(df_value) if df_value is not None else 0}\")\n",
+    "        print(f\"   - Income Picks: {len(df_income) if df_income is not None else 0}\")\n",
+    "        print(f\"   - Growth Picks: {len(df_growth) if df_growth is not None else 0}\")\n",
     "        \n",
     "    except Exception as e:\n",
     "        print(f\"❌ Error: {e}\")\n",
     "        print(\"Close the Excel file if it is currently open.\")\n",
     "\n",
     "# --- TRIGGER SAVE ---\n",
-    "if 'final_financial_results' in locals():\n",
-    "    save_financials_to_excel(final_financial_results)\n",
+    "# We check if the dataframes exist in your environment before saving\n",
+    "if 'df_value' in locals() and 'df_income' in locals() and 'df_growth' in locals():\n",
+    "    save_financials_to_excel(df_value, df_income, df_growth, master_df)\n",
     "else:\n",
-    "    print(\"⚠️ 'final_financial_results' is missing. Please run the analysis code block first.\")"
+    "    print(\"⚠️ DataFrames are missing. Please run the analysis code block first.\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "b42cd88d",
    "metadata": {},
    "outputs": [
@@ -320,7 +367,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\James\\AppData\\Local\\Temp\\ipykernel_23680\\4051987151.py:46: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
+      "C:\\Users\\James\\AppData\\Local\\Temp\\ipykernel_20432\\4051987151.py:46: FutureWarning: YF.download() has changed argument auto_adjust default to True\n",
       "  data = yf.download(ticker_list, period=\"1y\", interval=\"1d\", group_by='ticker', progress=False, threads=True)\n"
      ]
     },
@@ -387,7 +434,7 @@
          "type": "float"
         }
        ],
-       "ref": "0942da00-bbb2-49d2-8ad3-0cab4f4a3b4b",
+       "ref": "67dd0c0e-f158-47dc-b25a-c62cc9a5b696",
        "rows": [
         [
          "6",
