fixed dividend yield formatting

--- a/Equity_Research_CA_Nonfinancial.ipynb
+++ b/Equity_Research_CA_Nonfinancial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "8a5bb6f4",
    "metadata": {},
    "outputs": [],
@@ -11,12 +11,13 @@
     "import yfinance as yf\n",
     "import numpy as np\n",
     "import requests\n",
-    "import time"
+    "import time\n",
+    "from yahooquery import Ticker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 38,
    "id": "ccc229b0",
    "metadata": {},
    "outputs": [],
@@ -68,12 +69,12 @@
     "            'FTS.TO', 'EMA.TO', 'H.TO', 'AQN.TO', 'NPI.TO'\n",
     "        ]\n",
     "\n",
-    "    return list(set(tickers))\n"
+    "    return list(set(tickers))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 39,
    "id": "d4ac25c8",
    "metadata": {},
    "outputs": [],
@@ -163,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 40,
    "id": "3fa936d3",
    "metadata": {},
    "outputs": [],
@@ -177,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 41,
    "id": "79d46d23",
    "metadata": {},
    "outputs": [],
@@ -285,7 +286,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 42,
    "id": "217acd1a",
    "metadata": {},
    "outputs": [],
@@ -342,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "id": "52286659",
    "metadata": {},
    "outputs": [],
@@ -432,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 44,
    "id": "e4cc223f",
    "metadata": {},
    "outputs": [],
@@ -503,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 45,
    "id": "83f83d22",
    "metadata": {},
    "outputs": [
@@ -570,7 +571,7 @@
          "type": "string"
         }
        ],
-       "ref": "1d59fe60-fbba-4c56-8304-6fc517023b3a",
+       "ref": "81cceb37-fd07-4545-ab91-d47cd792dd4f",
        "rows": [
         [
          "1",
