--- a/Equity_Research_Canadian_Financials.ipynb
+++ b/Equity_Research_Canadian_Financials.ipynb
@@ -26,8 +26,8 @@
       "   2. df_income_ca (High Dividend)\n",
       "\n",
       "--- Value Preview (Canada) ---\n",
-      "       Ticker  Price       P/B       P/E      ROE  Yield%    Recom\n",
-      "13  KMP-UN.TO  16.27  0.610827  3.623608  0.18095   443.0  1.72727\n"
+      "      Ticker  Price       P/B       P/E      ROE  Yield%    Recom\n",
+      "8  KMP-UN.TO  16.27  0.610827  3.623608  0.18095    4.43  1.72727\n"
      ]
     }
    ],
@@ -37,12 +37,8 @@
     "import numpy as np\n",
     "import requests\n",
     "import time\n",
+    "from yahooquery import Ticker\n",
     "\n",
-    "# Try to import yahooquery for fast filtering\n",
-    "try:\n",
-    "    from yahooquery import Ticker\n",
-    "except ImportError:\n",
-    "    print(\"Please install yahooquery: pip install yahooquery\")\n",
     "\n",
     "# ==========================================\n",
     "# 1. STEP 1: FETCH CANADIAN UNIVERSE\n",
@@ -195,7 +191,7 @@
     "                'P/E': pe,\n",
     "                'P/B': pb,\n",
     "                'ROE': roe,\n",
-    "                'Yield%': round(div_yield * 100, 2),\n",
+    "                'Yield%': round(div_yield, 2),\n",
     "                'Recom': float(recom) if recom is not None else 3.0,\n",
     "                'Sector': row.get('Sector', 'Financial')\n",
     "            })\n",
