--- a/Equity_Research_USA_Analyst_Rating.ipynb
+++ b/Equity_Research_USA_Analyst_Rating.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "9abd87c8",
    "metadata": {},
    "outputs": [],
@@ -13,12 +13,13 @@
     "import requests\n",
     "import io\n",
     "import time\n",
-    "from scipy.stats import linregress"
+    "from scipy.stats import linregress\n",
+    "from yahooquery import Ticker"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "1b2759b5",
    "metadata": {},
    "outputs": [],
@@ -1209,6 +1210,100 @@
     "            display(moonshot_df.sort_values(by='Z-Score', ascending=False).head(10))\n",
     "        except NameError:\n",
     "            print(moonshot_df.sort_values(by='Z-Score', ascending=False).head(10))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f0f27435",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving results to: C:\\Users\\James\\OneDrive - McMaster University\\YFinance Stock Picks\\Nonfinancial Stocks\\General Market Research 2025-12-28.xlsx...\n",
+      "   -> Saved 46 Fortress stocks.\n",
+      "   -> Saved 9 Moonshot stocks.\n",
+      "   -> Saved 44 Distress stocks.\n",
+      "✅ Success! File saved.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import time\n",
+    "\n",
+    "# ==========================================\n",
+    "# 6. SAVE GENERAL RESULTS TO EXCEL\n",
+    "# ==========================================\n",
+    "def save_general_analysis_to_excel(fortress, moonshot, distress):\n",
+    "    \"\"\"\n",
+    "    Saves the Fortress, Moonshot, and Distress lists to separate Excel sheets.\n",
+    "    Target: OneDrive folder with Date Stamp.\n",
+    "    \"\"\"\n",
+    "    # Check if we have any data to save\n",
+    "    if (fortress is None or fortress.empty) and \\\n",
+    "       (moonshot is None or moonshot.empty) and \\\n",
+    "       (distress is None or distress.empty):\n",
+    "        print(\"No data to save.\")\n",
+    "        return\n",
+    "\n",
+    "    # --- 1. SETUP DATE & FILENAME ---\n",
+    "    today_date = time.strftime(\"%Y-%m-%d\")\n",
+    "    file_nickname = f\"General Market Research {today_date}.xlsx\"\n",
+    "\n",
+    "    # --- 2. SPECIFY DESTINATION ---\n",
+    "    # We use the explicit path you provided. \n",
+    "    # Note: We use a raw string (r\"...\") to handle backslashes correctly on Windows.\n",
+    "    onedrive_folder = r\"C:\\Users\\James\\OneDrive - McMaster University\\YFinance Stock Picks\\Nonfinancial Stocks\"\n",
+    "    \n",
+    "    # Combine folder and filename\n",
+    "    full_path = os.path.join(onedrive_folder, file_nickname)\n",
+    "\n",
+    "    print(f\"Saving results to: {full_path}...\")\n",
+    "\n",
+    "    try:\n",
+    "        # Check if directory exists; if not, create it to avoid errors\n",
+    "        if not os.path.exists(onedrive_folder):\n",
+    "            print(f\"   Warning: Folder not found. Creating: {onedrive_folder}\")\n",
+    "            os.makedirs(onedrive_folder, exist_ok=True)\n",
+    "\n",
+    "        with pd.ExcelWriter(full_path, engine='openpyxl') as writer:\n",
+    "            \n",
+    "            # Sheet 1: Fortress (Sorted by Safety/Z-Score)\n",
+    "            if fortress is not None and not fortress.empty:\n",
+    "                fortress.sort_values(by='Z-Score', ascending=False).to_excel(\n",
+    "                    writer, sheet_name='Fortress (Safe)', index=False\n",
+    "                )\n",
+    "                print(f\"   -> Saved {len(fortress)} Fortress stocks.\")\n",
+    "            \n",
+    "            # Sheet 2: Moonshot (Sorted by Z-Score)\n",
+    "            if moonshot is not None and not moonshot.empty:\n",
+    "                moonshot.sort_values(by='Z-Score', ascending=False).to_excel(\n",
+    "                    writer, sheet_name='Moonshot (Growth)', index=False\n",
+    "                )\n",
+    "                print(f\"   -> Saved {len(moonshot)} Moonshot stocks.\")\n",
+    "            \n",
+    "            # Sheet 3: Distress (Sorted by Risk/Z-Score ascending)\n",
+    "            if distress is not None and not distress.empty:\n",
+    "                distress.sort_values(by='Z-Score', ascending=True).to_excel(\n",
+    "                    writer, sheet_name='Distress (Avoid)', index=False\n",
+    "                )\n",
+    "                print(f\"   -> Saved {len(distress)} Distress stocks.\")\n",
+    "                \n",
+    "        print(f\"✅ Success! File saved.\")\n",
+    "\n",
+    "    except Exception as e:\n",
+    "        print(f\"❌ Error saving file: {e}\")\n",
+    "        print(\"Check if the file is open in Excel or if the path is correct.\")\n",
+    "\n",
+    "# --- EXECUTION ---\n",
+    "# This block runs immediately after your analysis finishes\n",
+    "if 'fortress_df' in locals() and 'moonshot_df' in locals():\n",
+    "    save_general_analysis_to_excel(fortress_df, moonshot_df, distress_df)\n",
+    "else:\n",
+    "    print(\"Please run the analysis step first to generate the dataframes.\")"
    ]
   },
   {
