--- a/Equity_Research_USA_Financials.ipynb
+++ b/Equity_Research_USA_Financials.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "8f19fd49",
    "metadata": {},
    "outputs": [],
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "d0b26944",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "id": "b221ce71",
    "metadata": {},
    "outputs": [],
@@ -111,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "id": "a349f916",
    "metadata": {},
    "outputs": [],
@@ -149,7 +149,7 @@
     "                'P/E': pe,\n",
     "                'P/B': pb,\n",
     "                'ROE': roe,\n",
-    "                'Yield%': round(div_yield * 100, 2),\n",
+    "                'Yield%': round(div_yield, 2),\n",
     "                'Recom': float(recom) if recom is not None else 3.0,\n",
     "                'Sector': row.get('Sector', 'Financial')\n",
     "            })\n",
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "79e52bad",
    "metadata": {},
    "outputs": [],
@@ -212,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "9ac89716",
    "metadata": {},
    "outputs": [
@@ -224,24 +224,7 @@
       "   -> Found 5974 US candidates.\n",
       "\n",
       "--- STEP 2: Filtering for Financial Services (YahooQuery) ---\n",
-      "   Filtering batch 5500 - 5974...\n",
-      "   -> Filter complete. Survivors: 100\n",
-      "\n",
-      "--- STEP 3: FETCHING METRICS FOR 100 STOCKS ---\n",
-      "   Fetching 95/100...\n",
-      "\n",
-      "✅ Done! Three DataFrames are ready for Data Wrangler:\n",
-      "   1. df_value  (Undervalued)\n",
-      "   2. df_income (High Dividend)\n",
-      "   3. df_growth (High P/E & Strong Buy)\n",
-      "\n",
-      "--- Growth Preview ---\n",
-      "   Ticker   Price        P/E    Recom  Yield%              Sector\n",
-      "34    BUR    9.09  22.725000  1.00000   138.0  Financial Services\n",
-      "5    RIOT   13.44  25.846153  1.27778     0.0  Financial Services\n",
-      "74    HUT   49.64  25.587627  1.33333     0.0  Financial Services\n",
-      "17      V  355.00  34.838078  1.50000    75.0  Financial Services\n",
-      "23    KKR  130.41  54.564854  1.50000    57.0  Financial Services\n"
+      "   Filtering batch 0 - 500...\r"
      ]
     }
    ],
@@ -272,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "f602da52",
    "metadata": {},
    "outputs": [
@@ -350,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "b42cd88d",
    "metadata": {},
    "outputs": [
