--- a/Equity_Res_USA_Datafolder.ipynb
+++ b/Equity_Res_USA_Datafolder.ipynb
@@ -767,6 +767,152 @@
     "else:\n",
     "    print(\"❌ 'final_results' variable not found. Please run the Main Filter first.\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ceaa9fcb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ==========================================\n",
+    "# Watchlist Combiner (Finviz + YFinance)\n",
+    "# ==========================================\n",
+    "\n",
+    "\n",
+    "\n",
+    "import pandas as pd\n",
+    "import yfinance as yf\n",
+    "from finvizfinance.quote import finvizfinance\n",
+    "import time\n",
+    "import numpy as np\n",
+    "\n",
+    "# --- 1. INPUT YOUR MANUAL LIST HERE ---\n",
+    "MY_TICKERS = ['GRND','ARCC','BANC','ONB','UBER','ADMA','MIR','APG','SEI','FLEX','DD'] \n",
+    "\n",
+    "def get_combined_watchlist(ticker_list):\n",
+    "    print(f\"--- Processing {len(ticker_list)} stocks ---\")\n",
+    "    \n",
+    "    # --- PART A: Get Analyst Ratings from Finviz ---\n",
+    "    print(\"1. Fetching Analyst Ratings from Finviz...\")\n",
+    "    finviz_data = []\n",
+    "    \n",
+    "    for ticker in ticker_list:\n",
+    "        try:\n",
+    "            stock = finvizfinance(ticker)\n",
+    "            info = stock.ticker_fundament()\n",
+    "            \n",
+    "            finviz_data.append({\n",
+    "                'Ticker': ticker,\n",
+    "                'Recom': info.get('Recom', np.nan),\n",
+    "                'Target_Price': info.get('Target Price', np.nan)\n",
+    "            })\n",
+    "            time.sleep(0.5) \n",
+    "            \n",
+    "        except Exception as e:\n",
+    "            print(f\"   Skipping Finviz for {ticker}: {e}\")\n",
+    "            finviz_data.append({'Ticker': ticker, 'Recom': np.nan, 'Target_Price': np.nan})\n",
+    "\n",
+    "    df_finviz = pd.DataFrame(finviz_data)\n",
+    "    \n",
+    "    # --- PART B: Get Real-Time Stats from yfinance ---\n",
+    "    print(\"2. Fetching Price & Volatility from yfinance...\")\n",
+    "    \n",
+    "    try:\n",
+    "        # Download data (1 Year is perfect for 52-Week MA)\n",
+    "        data = yf.download(ticker_list, period=\"1y\", interval=\"1d\", group_by='ticker', progress=False, threads=True)\n",
+    "        yf_stats = []\n",
+    "        \n",
+    "        for ticker in ticker_list:\n",
+    "            try:\n",
+    "                # --- FIXED: Robust Data Extraction ---\n",
+    "                if isinstance(data.columns, pd.MultiIndex):\n",
+    "                    if ticker in data.columns.levels[0]:\n",
+    "                        df = data[ticker].copy()\n",
+    "                    else:\n",
+    "                        print(f\"   Warning: {ticker} not found in yfinance download.\")\n",
+    "                        continue\n",
+    "                else:\n",
+    "                    df = data.copy()\n",
+    "\n",
+    "                # Cleanup\n",
+    "                df = df.dropna(subset=['Close'])\n",
+    "                if len(df) < 20: \n",
+    "                    print(f\"   Warning: Not enough data for {ticker}\")\n",
+    "                    continue\n",
+    "\n",
+    "                # --- MATH CALCULATIONS ---\n",
+    "                current_price = df['Close'].iloc[-1]\n",
+    "                prev_close = df['Close'].iloc[-2]\n",
+    "                \n",
+    "                high_52 = df['High'].max()\n",
+    "                drop_from_high = ((current_price - high_52) / high_52) * 100\n",
+    "                \n",
+    "                change_pct = ((current_price - prev_close) / prev_close) * 100\n",
+    "                \n",
+    "                # Volatility (30-day Std Dev)\n",
+    "                volatility = df['Close'].pct_change().std() * 100\n",
+    "                \n",
+    "                # Relative Volume\n",
+    "                curr_vol = df['Volume'].iloc[-1]\n",
+    "                avg_vol = df['Volume'].tail(30).mean()\n",
+    "                rel_vol = curr_vol / avg_vol if avg_vol > 0 else 0\n",
+    "\n",
+    "                # --- NEW: 52-Week Moving Average ---\n",
+    "                # Since we fetched exactly 1 year ('1y'), the mean of the whole column is the 52W MA\n",
+    "                ma_52w = df['Close'].mean()\n",
+    "\n",
+    "                # Distance from MA (Optional but helpful metric)\n",
+    "                # dist_ma = ((current_price - ma_52w) / ma_52w) * 100 \n",
+    "\n",
+    "                yf_stats.append({\n",
+    "                    'Ticker': ticker,\n",
+    "                    'Price': round(current_price, 2),\n",
+    "                    'Change_%': round(change_pct, 2),\n",
+    "                    '52W_MA': round(ma_52w, 2),          # <--- Added Here\n",
+    "                    'Drop_from_High_%': round(drop_from_high, 2),\n",
+    "                    'Volatility_%': round(volatility, 2),\n",
+    "                    'Rel_Volume': round(rel_vol, 2)\n",
+    "                })\n",
+    "                \n",
+    "            except Exception as e:\n",
+    "                print(f\"   Error calculating stats for {ticker}: {e}\")\n",
+    "                continue\n",
+    "                \n",
+    "        df_yf = pd.DataFrame(yf_stats)\n",
+    "        \n",
+    "    except Exception as e:\n",
+    "        print(f\"yfinance Critical Error: {e}\")\n",
+    "        return pd.DataFrame()\n",
+    "\n",
+    "    # --- PART C: Merge ---\n",
+    "    if not df_finviz.empty:\n",
+    "        if not df_yf.empty:\n",
+    "            master_df = pd.merge(df_finviz, df_yf, on='Ticker', how='outer')\n",
+    "        else:\n",
+    "            master_df = df_finviz\n",
+    "            \n",
+    "        # Added '52W_MA' to this list so it displays in the final table\n",
+    "        cols = ['Ticker', 'Price', 'Change_%', '52W_MA', 'Drop_from_High_%', 'Recom', 'Target_Price', 'Rel_Volume', 'Volatility_%']\n",
+    "        \n",
+    "        final_cols = [c for c in cols if c in master_df.columns]\n",
+    "        return master_df[final_cols]\n",
+    "    else:\n",
+    "        return pd.DataFrame()\n",
+    "\n",
+    "# --- RUN IT ---\n",
+    "watchlist_df = get_combined_watchlist(MY_TICKERS)\n",
+    "\n",
+    "if not watchlist_df.empty:\n",
+    "    if 'Drop_from_High_%' in watchlist_df.columns:\n",
+    "        watchlist_df['Drop_from_High_%'] = pd.to_numeric(watchlist_df['Drop_from_High_%'], errors='coerce')\n",
+    "        print(\"\\n--- Final Watchlist ---\")\n",
+    "        display(watchlist_df.sort_values(by='Drop_from_High_%', ascending=True))\n",
+    "    else:\n",
+    "        display(watchlist_df)\n",
+    "else:\n",
+    "    print(\"No data found.\")"
+   ]
   }
  ],
  "metadata": {
